force-app/main/default/objects/Listing_Form__c/Listing_Form__c.object-meta.xml
<CustomObject>
    <label>Content Request Form</label>
    <nameField>
        <label>Listing Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Request Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>