force-app/main/default/objects/Listing_Form__c/fields/Any_Challenges_with_property__c.field-meta.xml
<CustomField>
    <fullName>Any_Challenges_with_property__c</fullName>
    <label>Any Challenges with property</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>