force-app/main/default/objects/Listing_Form__c/fields/Architect_Interior_Designer__c.field-meta.xml
<CustomField>
    <fullName>Architect_Interior_Designer__c</fullName>
    <label>Architect / Interior Designer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>