force-app/main/default/objects/Listing_Form__c/fields/Building_Sub_Community__c.field-meta.xml
<CustomField>
    <fullName>Building_Sub_Community__c</fullName>
    <formula>Listing__r.pba_uaefields__Community_Propertyfinder__c+&apos;,&apos;+ &apos; &apos;+
Listing__r.pba_uaefields__Sub_Community_Propertyfinder__c+&apos;,&apos;+ &apos;  &apos;+
Listing__r.pba_uaefields__Property_Propertyfinder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building/Sub Community</label>
    <type>Text</type>
</CustomField>