force-app/main/default/objects/Listing_Form__c/fields/Community_facilities_features__c.field-meta.xml
<CustomField>
    <fullName>Community_facilities_features__c</fullName>
    <inlineHelpText>i.e private schools, nursery, lake, .. etc</inlineHelpText>
    <label>Community facilities &amp; features</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>