force-app/main/default/objects/Listing_Form__c/fields/Content_Request_User__c.field-meta.xml
<CustomField>
    <fullName>Content_Request_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Request User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Content_Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>