force-app/main/default/objects/Listing_Form__c/fields/CRF_Number__c.field-meta.xml
<CustomField>
    <fullName>CRF_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>CRF Number</label>
    <type>AutoNumber</type>
</CustomField>