force-app/main/default/objects/Listing_Form__c/fields/If_an_apartment_which_floor_s_is_it_on__c.field-meta.xml
<CustomField>
    <fullName>If_an_apartment_which_floor_s_is_it_on__c</fullName>
    <label>If an apartment, which floor/s is it on?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>