force-app/main/default/objects/Listing_Form__c/fields/Is_the_Listing_exclusive_non_exclusive__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Listing_exclusive_non_exclusive__c</fullName>
    <formula>TEXT(Listing__r.gsir_mandate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is the Listing exclusive /non-exclusive?</label>
    <type>Text</type>
</CustomField>