force-app/main/default/objects/Listing_Form__c/fields/Key_Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Key_Target_Audience__c</fullName>
    <inlineHelpText>Who will be target audience for the property? who are the residents in the neighbourhood? (good for families/singles etc)</inlineHelpText>
    <label>Key Target Audience</label>
    <type>TextArea</type>
</CustomField>