force-app/main/default/objects/Listing_Form__c/fields/Key_USP_s__c.field-meta.xml
<CustomField>
    <fullName>Key_USP_s__c</fullName>
    <inlineHelpText>i.e Ambience, Look &amp; feel, low price, in demand location, unique facilities etc</inlineHelpText>
    <label>Key USP&apos;s</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>