force-app/main/default/objects/Listing_Form__c/fields/Kitchen_Description__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Description__c</fullName>
    <inlineHelpText>i.e branded kitchen appliance, Breakfast bars,... etc</inlineHelpText>
    <label>Kitchen Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>