force-app/main/default/objects/Listing_Form__c/fields/Leisure_Entertainment_facilities__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Entertainment_facilities__c</fullName>
    <inlineHelpText>i.e games room, cinema, - shared or private.. etc</inlineHelpText>
    <label>Leisure / Entertainment facilities</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>