force-app/main/default/objects/Listing_Form__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>pba__Listing__c</referenceTo>
    <relationshipLabel>Content Request Forms</relationshipLabel>
    <relationshipName>Listing_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>