force-app/main/default/objects/Listing_Form__c/fields/Listing_Address__c.field-meta.xml
<CustomField>
    <fullName>Listing_Address__c</fullName>
    <formula>Listing__r.pba_uaefields__Propertyfinder_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Address</label>
    <type>Text</type>
</CustomField>