force-app/main/default/objects/Listing_Form__c/fields/Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Listing__r.Listing_Inquiry_Recipient__c)),
    Listing__r.Listing_Inquiry_Recipient__r.FirstName + &quot; &quot; + Listing__r.Listing_Inquiry_Recipient__r.LastName + &quot; | &quot; + Listing__r.Listing_Inquiry_Recipient__r.Email + &quot; | &quot; + Listing__r.Listing_Inquiry_Recipient__r.MobilePhone,

    Listing__r.Owner:User.FirstName + &quot; &quot; + Listing__r.Owner:User.LastName + &quot; | &quot; + Listing__r.Owner:User.Email + &quot; | &quot; + Listing__r.Owner:User.MobilePhone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Agent</label>
    <type>Text</type>
</CustomField>