force-app/main/default/objects/Listing_Form__c/fields/Listing_Agent_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Agent Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Content_Request_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>