force-app/main/default/objects/Listing_Form__c/fields/Listing_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Listing_Form_Link__c</fullName>
    <formula>&quot;https://lightning.nativeforms.app/m0/bX1Zc1FSvpCJ/&quot;&amp;Listing__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Form Link</label>
    <type>Text</type>
</CustomField>