force-app/main/default/objects/Listing_Form__c/fields/Listing_Link__c.field-meta.xml
<CustomField>
    <fullName>Listing_Link__c</fullName>
    <formula>&quot;https://gulfsothebysinternational.lightning.force.com/&quot; &amp; Listing__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Link</label>
    <type>Text</type>
</CustomField>