force-app/main/default/objects/Listing_Form__c/fields/Listing_Price__c.field-meta.xml
<CustomField>
    <fullName>Listing_Price__c</fullName>
    <formula>Listing__r.pba__ListingPrice_pb__c</formula>
    <label>Listing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>