force-app/main/default/objects/Listing_Form__c/fields/Listing_Status__c.field-meta.xml
<CustomField>
    <fullName>Listing_Status__c</fullName>
    <formula>Text(Listing__r.pba__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Status</label>
    <type>Text</type>
</CustomField>