force-app/main/default/objects/Listing_Form__c/fields/Notable_brands_in_the_property__c.field-meta.xml
<CustomField>
    <fullName>Notable_brands_in_the_property__c</fullName>
    <inlineHelpText>Brands like Versace, Fendi, Miele, Bvlgari used in anyway in the property</inlineHelpText>
    <label>Notable brands in the property</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>