force-app/main/default/objects/Listing_Form__c/fields/Photo_Uploaded_Verify__c.field-meta.xml
<CustomField>
    <fullName>Photo_Uploaded_Verify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Uploaded</label>
    <type>Checkbox</type>
</CustomField>