force-app/main/default/objects/Listing_Form__c/fields/Photographer_Booking__c.field-meta.xml
<CustomField>
    <fullName>Photographer_Booking__c</fullName>
    <inlineHelpText>Enter the desired date and time for the photographer to visit the premises</inlineHelpText>
    <label>Photographer Booking</label>
    <type>DateTime</type>
</CustomField>