force-app/main/default/objects/Listing_Form__c/fields/Photos_Link__c.field-meta.xml
<CustomField>
    <fullName>Photos_Link__c</fullName>
    <inlineHelpText>Link to photos.</inlineHelpText>
    <label>Photos Link</label>
    <type>Url</type>
</CustomField>