force-app/main/default/objects/Listing_Form__c/fields/Property_outdoor_space__c.field-meta.xml
<CustomField>
    <fullName>Property_outdoor_space__c</fullName>
    <inlineHelpText>i.e Garden, balcony, garage or pool - shared or private.. etc</inlineHelpText>
    <label>Property outdoor space</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>