force-app/main/default/objects/Listing_Form__c/fields/Property_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Sub_Type__c</fullName>
    <formula>Text(Listing__r.pba_uaefields__Property_Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Sub-Type</label>
    <type>Text</type>
</CustomField>