force-app/main/default/objects/Listing_Form__c/fields/Ready_unit_Under_construction__c.field-meta.xml
<CustomField>
    <fullName>Ready_unit_Under_construction__c</fullName>
    <formula>Text(Listing__r.pba_uaefields__Completion_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready unit / Under construction?</label>
    <type>Text</type>
</CustomField>