force-app/main/default/objects/Listing_Form__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <displayFormat>Listing Form-{000000}</displayFormat>
    <label>Reference</label>
    <type>AutoNumber</type>
</CustomField>