force-app/main/default/objects/Listing_Form__c/fields/Refurbishments_Upgrades__c.field-meta.xml
<CustomField>
    <fullName>Refurbishments_Upgrades__c</fullName>
    <label>Refurbishments/Upgrades</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>