force-app/main/default/objects/Listing_Form__c/fields/Requires_Photography__c.field-meta.xml
<CustomField>
    <fullName>Requires_Photography__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this listing require a photographer to be sent to the property?</inlineHelpText>
    <label>Requires Photography?</label>
    <type>Checkbox</type>
</CustomField>