force-app/main/default/objects/Listing_Form__c/fields/Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin__c</fullName>
    <formula>MOD(VALUE(  CRF_Number__c ),4)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>