force-app/main/default/objects/Listing_Form__c/fields/User_Login__c.field-meta.xml
<CustomField>
    <fullName>User_Login__c</fullName>
    <formula>IF( Content_Request_User__c  =  $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Login</label>
    <type>Checkbox</type>
</CustomField>