force-app/main/default/objects/Listing_Form__c/fields/ving_R__c.field-meta.xml
<CustomField>
    <fullName>ving_R__c</fullName>
    <inlineHelpText>i.e Open plan layouts, designer interior finishes, Italian wood floor... etc</inlineHelpText>
    <label>Living Area Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>