force-app/main/default/objects/Listing_Form__c/validationRules/Cant_submit_if_blank_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_submit_if_blank_fields</fullName>
    <active>true</active>
    <description>Prevents the status from being changed to &apos;submitted&apos; if there are blank fields</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
OR(
ISBLANK( Any_Challenges_with_property__c ),
ISBLANK( Building_Sub_Community__c ),
ISBLANK(  Community_facilities_features__c  ),
ISBLANK(   Is_the_Listing_exclusive_non_exclusive__c   ),
ISBLANK(  Key_Target_Audience__c  ),
ISBLANK(  Key_USP_s__c  ),
ISBLANK(  Kitchen_Description__c  ),
ISBLANK(  Leisure_Entertainment_facilities__c  ),
ISBLANK(   Listing_Price__c   ),
ISBLANK(   ving_R__c    ),
ISBLANK(   Notable_brands_in_the_property__c   ),
ISBLANK(   Number_of_Bathrooms__c   ),
ISBLANK(   Number_of_Bedrooms__c   ),
ISBLANK(   TEXT(Property_Orientation__c   )),
ISBLANK(    Property_outdoor_space__c    ),
ISBLANK(    Property_Sub_Type__c     ),
ISBLANK(    Ready_unit_Under_construction__c    ),
ISBLANK(    Refurbishments_Upgrades__c    )
)
)</errorConditionFormula>
    <errorMessage>All data fields must be completed before you can submit this. Please check if there are any blank fields and update them</errorMessage>
</ValidationRule>