force-app/main/default/objects/Listing_Form__c/validationRules/Listing_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Listing_Status</fullName>
    <active>false</active>
    <description>Prevents the creation of a CRF unless the Listing status is &apos;Content Creation&apos; or greater</description>
    <errorConditionFormula>and
(
Listing__r.Override_CRF_Rule__c = False,
NOT(ISPICKVAL(Listing__r.pba__Status__c,&apos;Quality Check&apos;)
))</errorConditionFormula>
    <errorDisplayField>Listing__c</errorDisplayField>
    <errorMessage>You can only create or save a Content Request Form if the Listing record status is set to &apos;Content Creation&apos;</errorMessage>
</ValidationRule>