force-app/main/default/objects/Listing_Form__c/validationRules/Photographer_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Photographer_date</fullName>
    <active>true</active>
    <description>Requires a time and date for photographer</description>
    <errorConditionFormula>AND
(
( Requires_Photography__c  = true),
ISBLANK( Photographer_Booking__c )
)</errorConditionFormula>
    <errorDisplayField>Photographer_Booking__c</errorDisplayField>
    <errorMessage>Please enter the date and time that the photographer is required at the property before you save this record</errorMessage>
</ValidationRule>