force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Any_Challenges_with_property.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Any_Challenges_with_property</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Any_Challenges_with_property__c )
)</errorConditionFormula>
    <errorDisplayField>Any_Challenges_with_property__c</errorDisplayField>
    <errorMessage>Any Challenges with property is required for submission</errorMessage>
</ValidationRule>