force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Building_Sub_Community.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Building_Sub_Community</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Building_Sub_Community__c )
)</errorConditionFormula>
    <errorMessage>Building/Sub Community is required for submission</errorMessage>
</ValidationRule>