force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Community_facilities_features.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Community_facilities_features</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Community_facilities_features__c )
)</errorConditionFormula>
    <errorDisplayField>Community_facilities_features__c</errorDisplayField>
    <errorMessage>Community facilities &amp; features is required for submission</errorMessage>
</ValidationRule>