force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Key_Target_Audience.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Key_Target_Audience</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Key_Target_Audience__c )
)</errorConditionFormula>
    <errorDisplayField>Key_Target_Audience__c</errorDisplayField>
    <errorMessage>Key Target Audience is required for submission</errorMessage>
</ValidationRule>