force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Key_USP_s.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Key_USP_s</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Key_USP_s__c )
)</errorConditionFormula>
    <errorDisplayField>Key_USP_s__c</errorDisplayField>
    <errorMessage>Key USP&apos;s is required for submission</errorMessage>
</ValidationRule>