force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Kitchen_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Kitchen_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Kitchen_Description__c )
)</errorConditionFormula>
    <errorDisplayField>Kitchen_Description__c</errorDisplayField>
    <errorMessage>Kitchen Description is required for submission</errorMessage>
</ValidationRule>