force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Leisure_Entertainment_facilities.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Leisure_Entertainment_facilities</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Leisure_Entertainment_facilities__c )
)</errorConditionFormula>
    <errorDisplayField>Leisure_Entertainment_facilities__c</errorDisplayField>
    <errorMessage>Leisure / Entertainment facilities is required for submission</errorMessage>
</ValidationRule>