force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Listing_exclusive_non_exclusive.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Listing_exclusive_non_exclusive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Is_the_Listing_exclusive_non_exclusive__c )
)</errorConditionFormula>
    <errorMessage>Is the Listing exclusive /non-exclusive is required for submission</errorMessage>
</ValidationRule>