force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Listing_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Listing_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Listing_Price__c )
)</errorConditionFormula>
    <errorMessage>Listing Price is required for submission</errorMessage>
</ValidationRule>