force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Living_Area_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Living_Area_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( ving_R__c )
)</errorConditionFormula>
    <errorDisplayField>ving_R__c</errorDisplayField>
    <errorMessage>Living Area Description is required for submission</errorMessage>
</ValidationRule>