force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Notable_brands_in_the_property.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Notable_brands_in_the_property</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Notable_brands_in_the_property__c )
)</errorConditionFormula>
    <errorDisplayField>Notable_brands_in_the_property__c</errorDisplayField>
    <errorMessage>Notable brands in the property is required for submission</errorMessage>
</ValidationRule>