force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Number_of_Bathrooms.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Number_of_Bathrooms</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Number_of_Bathrooms__c )
)</errorConditionFormula>
    <errorMessage>Number of Bathrooms is required for submission</errorMessage>
</ValidationRule>