force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Property_Orientation.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Property_Orientation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( TEXT(Property_Orientation__c ))
)</errorConditionFormula>
    <errorDisplayField>Property_Orientation__c</errorDisplayField>
    <errorMessage>Property Orientation is required for submission</errorMessage>
</ValidationRule>