force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Property_outdoor_space.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Property_outdoor_space</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Property_outdoor_space__c )
)</errorConditionFormula>
    <errorDisplayField>Property_outdoor_space__c</errorDisplayField>
    <errorMessage>Property outdoor space is required for submission</errorMessage>
</ValidationRule>