force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Property_Sub_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Property_Sub_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Property_Sub_Type__c )
)</errorConditionFormula>
    <errorMessage>Property Sub-Type is required for submission</errorMessage>
</ValidationRule>