force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Ready_unit_Under_construction.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Ready_unit_Under_construction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Ready_unit_Under_construction__c )
)</errorConditionFormula>
    <errorMessage>Ready unit / Under construction is required for submission</errorMessage>
</ValidationRule>