force-app/main/default/objects/Listing_Form__c/validationRules/REQ_Refurbishments_Upgrades.validationRule-meta.xml
<ValidationRule>
    <fullName>REQ_Refurbishments_Upgrades</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c ,&apos;Submitted&apos;),
ISBLANK( Refurbishments_Upgrades__c )
)</errorConditionFormula>
    <errorDisplayField>Refurbishments_Upgrades__c</errorDisplayField>
    <errorMessage>Refurbishments/Upgrades is required for submission</errorMessage>
</ValidationRule>