force-app/main/default/objects/Listing_Form__c/listViews/My_All_Content_Request_Form.listView-meta.xml
<ListView>
    <fullName>My_All_Content_Request_Form</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Listing_Agent__c</columns>
    <columns>Status__c</columns>
    <columns>Listing_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Listing_Status__c</field>
        <operation>notContain</operation>
        <value>Published,Rented,Lost,Sold</value>
    </filters>
    <label>2. My All Content Request Form</label>
</ListView>